--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -1815,7 +1815,7 @@ Máirín Duffy &lt;duffy@redhat.com&gt;
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
-				      <property name="wrap">False</property>
+				      <property name="wrap">True</property>
 				      <property name="selectable">False</property>
 				      <property name="xalign">0</property>
 				      <property name="yalign">0.5</property>
