Extract disk & network device information from domain XML

--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -2142,7 +2142,7 @@ Máirín Duffy &lt;duffy@redhat.com&gt;
 				      <property name="visible">True</property>
 				      <property name="can_focus">True</property>
 				      <property name="headers_visible">True</property>
-				      <property name="rules_hint">False</property>
+				      <property name="rules_hint">True</property>
 				      <property name="reorderable">False</property>
 				      <property name="enable_search">True</property>
 				      <property name="fixed_height_mode">False</property>
@@ -2445,11 +2445,11 @@ Máirín Duffy &lt;duffy@redhat.com&gt;
 				      <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 				      <child>
-					<widget class="GtkTreeView" id="treeview2">
+					<widget class="GtkTreeView" id="network-view">
 					  <property name="visible">True</property>
 					  <property name="can_focus">True</property>
 					  <property name="headers_visible">True</property>
-					  <property name="rules_hint">False</property>
+					  <property name="rules_hint">True</property>
 					  <property name="reorderable">False</property>
 					  <property name="enable_search">True</property>
 					  <property name="fixed_height_mode">False</property>
