--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -3305,6 +3305,24 @@ Máirín Duffy &lt;duffy@redhat.com&gt;
 	      <property name="homogeneous">True</property>
 	    </packing>
 	  </child>
+
+	  <child>
+	    <widget class="GtkToggleToolButton" id="control-fullscreen">
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">Full screen</property>
+	      <property name="use_underline">True</property>
+	      <property name="stock_id">gtk-zoom-fit</property>
+	      <property name="visible_horizontal">True</property>
+	      <property name="visible_vertical">True</property>
+	      <property name="is_important">False</property>
+	      <property name="active">False</property>
+	      <signal name="toggled" handler="on_control_fullscreen_toggled" last_modification_time="Tue, 29 Aug 2006 20:00:28 GMT"/>
+	    </widget>
+	    <packing>
+	      <property name="expand">False</property>
+	      <property name="homogeneous">True</property>
+	    </packing>
+	  </child>
 	</widget>
 	<packing>
 	  <property name="padding">0</property>
