some UI cleanups for domain creation wizard

--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -6696,7 +6696,7 @@ TB</property>
 			      <child>
 				<widget class="GtkLabel" id="label213">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">&lt;small&gt;&lt;b&gt;Example:&lt;/b&gt; nfs://servername.example.com/rhel-5/u0/vs/i386/tree&lt;/small&gt;</property>
+				  <property name="label" translatable="yes">&lt;small&gt;&lt;b&gt;Example:&lt;/b&gt; http://servername.example.com/distro/i386/tree&lt;/small&gt;</property>
 				  <property name="use_underline">False</property>
 				  <property name="use_markup">True</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -6782,7 +6782,7 @@ TB</property>
 			      <child>
 				<widget class="GtkLabel" id="label215">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">&lt;small&gt;&lt;b&gt;Example:&lt;/b&gt; ftp://hostname.example.com/ks/rhel5.0-vs-x86.ks&lt;/small&gt;</property>
+				  <property name="label" translatable="yes">&lt;small&gt;&lt;b&gt;Example:&lt;/b&gt; ftp://hostname.example.com/ks/ks.cfg&lt;/small&gt;</property>
 				  <property name="use_underline">False</property>
 				  <property name="use_markup">True</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -7356,7 +7356,7 @@ TB</property>
 				<widget class="GtkEntry" id="storage-file-address">
 				  <property name="visible">True</property>
 				  <property name="can_focus">True</property>
-				  <property name="editable">False</property>
+				  <property name="editable">True</property>
 				  <property name="visibility">True</property>
 				  <property name="max_length">0</property>
 				  <property name="text" translatable="yes"></property>
@@ -8497,11 +8497,73 @@ You'll now be able to view and work with $SYSTEM_NAME in the virtual machine man
 	  <child>
 	    <widget class="GtkButton" id="create-finish">
 	      <property name="can_focus">True</property>
-	      <property name="label" translatable="yes">_Finish</property>
-	      <property name="use_underline">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
 	      <signal name="clicked" handler="on_create_finish_clicked" last_modification_time="Wed, 09 Aug 2006 18:56:13 GMT"/>
+
+	      <child>
+		<widget class="GtkAlignment" id="alignment119">
+		  <property name="visible">True</property>
+		  <property name="xalign">0.5</property>
+		  <property name="yalign">0.5</property>
+		  <property name="xscale">0</property>
+		  <property name="yscale">0</property>
+		  <property name="top_padding">0</property>
+		  <property name="bottom_padding">0</property>
+		  <property name="left_padding">0</property>
+		  <property name="right_padding">0</property>
+
+		  <child>
+		    <widget class="GtkHBox" id="hbox45">
+		      <property name="visible">True</property>
+		      <property name="homogeneous">False</property>
+		      <property name="spacing">2</property>
+
+		      <child>
+			<widget class="GtkImage" id="image95">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-quit</property>
+			  <property name="icon_size">4</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+			<packing>
+			  <property name="padding">0</property>
+			  <property name="expand">False</property>
+			  <property name="fill">False</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkLabel" id="label305">
+			  <property name="visible">True</property>
+			  <property name="label" translatable="yes">_Finish</property>
+			  <property name="use_underline">True</property>
+			  <property name="use_markup">False</property>
+			  <property name="justify">GTK_JUSTIFY_LEFT</property>
+			  <property name="wrap">False</property>
+			  <property name="selectable">False</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+			  <property name="width_chars">-1</property>
+			  <property name="single_line_mode">False</property>
+			  <property name="angle">0</property>
+			</widget>
+			<packing>
+			  <property name="padding">0</property>
+			  <property name="expand">False</property>
+			  <property name="fill">False</property>
+			</packing>
+		      </child>
+		    </widget>
+		  </child>
+		</widget>
+	      </child>
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
